--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
           اهلا بكم في<br />
           <span> CLeset </span>
         </h2>
-        <h3>قوانين | شروحات | تجارب | إختبارات</h3>
+        <h3>الثانوية السابعة والأربعون للكيمياء</h3>
+        <h4>قوانين | شروحات | تجارب | إختبارات</h4>
         <a href=" # عن الموقع" class="main-btn"> عن الموقع</a>
         <div class="social-icons">
           <a
