--- a/index.html
+++ b/index.html
@@ -6,119 +6,496 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css "
     />
     <link rel="stylesheet" href="style.css" />
-    <title>كيمياء | Chemistry</title>
-    <link
-      rel="website icon"
-      type="png"
-      href="imags/c-_icon-removebg-preview.png"
-    />
+    <title>chemistry | 1</title>
+    <link rel="website icon" type="png" href="imges/كيمياء-1.png" />
   </head>
   <body>
     <header>
-      <img class="logo-img" src="imags/oo.png" alt="logo" />
+      <img class="logo" src="imges/oo.png" alt="logo" />
       <nav class="navigation">
-        <a href="# عن الموقع">عن الموقع </a>
-        <a href="#الكتب"> الكتب</a>
+        <a href="#الفصل الأول    ">الفصل الأول </a>
+        <a href="#الفصل الثاني  ">الفصل الثاني </a>
+        <a href="#الفصل الثالث  ">الفصل الثالث </a>
+        <a href="#الفصل الرابع  ">الفصل الرابع </a>
+        <a href="#الفصل الخامس  ">الفصل الخامس </a>
       </nav>
-      </button>
     </header>
-
     <section class="main">
       <div>
         <h2>
-          اهلا بكم في<br />
-          <span> CLeset </span>
+          قوانين <br />
+          <span> كيمياء ( 1 ) </span>
         </h2>
-        <h3>قوانين | شروحات | تجارب | إختبارات</h3>
-        <a href=" # عن الموقع" class="main-btn"> عن الموقع</a>
-        <div class="social-icons">
-          <a
-            target="_blank"
-            href="https://instagram.com/moe_mdi_05_0102?igshid=YmMyMTA2M2Y="
-            class="icon"
-          >
-            <i class="fa-brands fa-instagram"></i
-          ></a>
-          <a
-            target="_blank"
-            href="https://twitter.com/moe_mdi_05_0128?s=21&t=ToiulBqpTJ16tjvZF9oi6g"
-            class="icon"
-          >
-            <i class="fa-brands fa-twitter"></i
-          ></a>
+        <a
+          target="_blank"
+          href="https://drive.google.com/file/d/151iM5ZAolxfM4vHNTsazP2TTY3KNGJ5p/view?usp=share_link"
+          class="main-btn"
+        >
+          ملف القوانين</a
+        >
+      </div>
+    </section>
+    <section class="teitch-cards" id="الفصل الأول">
+      <div class="info">
+        <h2 class="title-2">الفصل الأول</h2>
+        <div class="content">
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">التجربة الإستهلالية</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/Fms5miMcZtA"
+                  class="link"
+                  >فيديو التجربة
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: قصة مادتين</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/N5jlb24CYmY"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: الكيمياءو المادة</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/zEJsMgl6Cz0"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: الطرائق العلمية</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/7dvWgyJ_seA"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/PcldkP0ftsY"
+                  class="link"
+                >
+                  التجربة
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: البحث العلمي</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/RKoTQGOgStY"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">مختبر الكيمياء</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/b1xevVQA1Ag"
+                  class="link"
+                >
+                  فيديو التجربة
+                </a>
+              </strong>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="teitch-cards-2" id="الفصل الثاني">
+      <div class="info-2">
+        <h2 class="title-3">الفصل الثاني</h2>
+        <div class="content">
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">التجربة الإستهلالية</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/LEnXaC1PBIE"
+                  class="link"
+                >
+                  فيديو التجربة
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: خواص المادة</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/Y31XFDCKxhQ"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: تغيرات المادة</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/-iBb7WGvA1s"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: المخاليط</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/akbmiYEfSV8"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/AojMBvrpZUE"
+                  class="link"
+                >
+                  التجربة
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: العناصر و المركبات</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/ABouCYZrcC8"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">مختبر الكيمياء</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/ropiWNcpI-g"
+                  class="link"
+                >
+                  فيديو التجربة
+                </a>
+              </strong>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
-    <section class="website-section" id=" عن الموقع">
-          <h2 class="title">عن الموقع</h2>
-          <p class="About-website-p-1">
-            موقع كليسيت يرحب بكن عزيزاتي الطالبات
-            <br />
-            يمكنكن اعتبار هذا الموقع كمرجع لكن اثناء دراسة 
-            الكيمياء
-           <br />
-            . تم صناعة هذا الموقع  بالتعاون مع معلمة المادة :
-            عايدة المطيري
-          </p>
-    </section>
-
-    <section class="book-cards" id="الكتب">
-      <h2 class="title-2">الكتب</h2>
-      <div class="content">
-        <div class="card-1">
-          <div class="icon-2">
-            <img class="logo" src="imags/كيمياء-1.png" alt="logo" />
+    <section class="teitch-cards-3" id="الفصل الثالث">
+      <div class="info-3">
+        <h2 class="title-4">الفصل الثالث</h2>
+        <div class="content">
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">التجربة الإستهلالية</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/i2NBuUkYo8A"
+                  class="link"
+                >
+                  فيديو التجربة
+                </a>
+              </strong>
+            </div>
           </div>
-          <div class="info">
-            <p class="book-p">الصف الأول ثانوي - الترم الثالث -</p>
-            <strong>
-            <a href="#" class="11">كيمياء (1-1) </a>
-            </strong>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: الأفكار القديمة للمادة</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/zeJHMVoR8M8"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
           </div>
-        </div>
-        <div class="card-1">
-          <div class="icon-2">
-            <img class="logo" src="imags/كيمياء-2.png" alt="logo" />
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: تعريف الذرة</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/C6fjJIF3NNk"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
           </div>
-          <div class="info">
-            <p class="book-p">الصف الثاني ثانوي - الترم الأول -</p>
-            <strong>
-            <a href="#" class="11">كيمياء (2-1) </a>
-            </strong>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: كيف تختلف الذرات</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/CiZn4BuZFeo"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/HIxxKkNLsak"
+                  class="link"
+                >
+                  التجربة
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">
+                درس: الأنوية غير المستقرة و التحلل الإشعاعي
+              </h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/etF7ZFq6IU4"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">مختبرالكيمياء</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/aKfVmhaakR4"
+                  class="link"
+                >
+                  فيديو التجربة
+                </a>
+              </strong>
+            </div>
           </div>
         </div>
       </div>
+    </section>
+
+    <section class="teitch-cards-2" id="الفصل الرابع">
+      <div class="info">
+        <h2 class="title-2">الفصل الرابع</h2>
+        <div class="content">
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">التجربة الإستهلالية</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/tERGi-4jA2w"
+                  class="link"
+                >
+                  فيديو التجربة
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: التفاعلات و المعادلات</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/DVe9RNv1lg8"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: تصنيف التفاعلات الكيميائية</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/W1gSecNZBBQ"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: التفاعلات في المحاليل المائية</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/YFi4wOhYVOs"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/xhTe76hmPlw"
+                  class="link"
+                >
+                  التجربة
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">مختبرالكيمياء</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/tJHdV02JdmE"
+                  class="link"
+                >
+                  فيديو التجربة
+                </a>
+              </strong>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
-    <section class="img-logo">
-      <div class="imgs-logo">
-        <div class="card">
-          <div class="icon-3">
-            <img class="logo" src="imags/شعار المدرسة-.jpg" alt="logo" />
+    <section class="teitch-cards" id="الفصل الخامس">
+      <div class="info-2">
+        <h2 class="title-3">الفصل الخامس</h2>
+        <div class="content">
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">التجربة الإستهلالة</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/DhJG_KUaldM"
+                  class="link"
+                >
+                  فيديو التجربة
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: قياس المادة</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/LKbEWS0FV5Y"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: الكتلة والمول</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/DKC10G_A9Nw"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">درس: مولات المركبات</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/D35MrVZL2bE"
+                  class="link"
+                >
+                  شرح الدرس
+                </a>
+              </strong>
+            </div>
+          </div>
+          <div class="card-1">
+            <div class="info">
+              <h2 class="book-h">الكيمياء و الحياة</h2>
+              <strong>
+                <a
+                  target="_blank"
+                  href="https://youtu.be/k3WayMEBr7Q"
+                  class="link"
+                >
+                  فيديو التجربة
+                </a>
+              </strong>
+            </div>
           </div>
         </div>
-        <div class="card">
-          <div class="icon-3">
-            <img class="logo" src="imags/logo-img.png" alt="logo" />
-          </div>
-        </div>
-
-
       </div>
     </section>
-    <footer class="footer">
-      <p class="footer-titl">de1m6alharby@gmail.com 
-         <span> في حال وجود أي اقتراحات للتطوير يرجى إرسلها على البريد التالي
-          
-          
-         </span>
-      </p>
-    </footer>
   </body>
 </html>
