--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="info">
             <p class="book-p">الصف الأول ثانوي - الترم الثالث -</p>
             <strong>
-<a href="file:///C:\Users\OXED\Desktop\ديما جهز\كيمياء\chemistry(1)\cleset.html" class="11">كيمياء (1-1) </a>            </strong>
+<a href="https://clesetp2.github.io/CLesetp2/" class="11">كيمياء (1-1) </a>            </strong>
           </div>
         </div>
         <div class="card-1">
