--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
           <div class="info">
             <p class="book-p">الصف الأول ثانوي - الترم الثالث -</p>
             <strong>
-<a href="https://clesetp2.github.io/CLesetp2/" class="11">كيمياء (1-1) </a>            </strong>
+            <a href="file:///C:/Users/abwbd/OneDrive/%D8%B3%D8%B7%D8%AD%20%D8%A7%D9%84%D9%85%D9%83%D8%AA%D8%A8/chemistry(1)/cleset.html" class="11">كيمياء (1-1) </a>
+            </strong>
           </div>
         </div>
         <div class="card-1">
@@ -99,18 +100,17 @@
       <div class="imgs-logo">
         <div class="card">
           <div class="icon-3">
-            <img class="logo" src="imags/شعار المدرسة-.jpg" alt="logo" />
+            <img class="logo-1" src="imags/شعار المدرسة-.jpg" alt="logo" />
           </div>
         </div>
         <div class="card">
           <div class="icon-3">
-            <img class="logo" src="imags/logo-img.png" alt="logo" />
+            <img class="logo-1" src="imags/logo-img.png" alt="logo" />
           </div>
         </div>
-
-
       </div>
     </section>
+    
     <footer class="footer">
       <p class="footer-titl">de1m6alharby@gmail.com 
          <span> في حال وجود أي اقتراحات للتطوير يرجى إرسلها على البريد التالي
