--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="info">
             <p class="book-p">الصف الأول ثانوي - الترم الثالث -</p>
             <strong>
-            <a href="file:///C:/Users/abwbd/OneDrive/%D8%B3%D8%B7%D8%AD%20%D8%A7%D9%84%D9%85%D9%83%D8%AA%D8%A8/chemistry(1)/cleset.html" class="11">كيمياء (1-1) </a>
+            <a href="https://clesetp2.github.io/CLesetp2/">كيمياء (1-1) </a>
             </strong>
           </div>
         </div>
