--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     />
   </head>
   <body>
-    <header>
-      <img class="logo-img" src="imags/oo.png" alt="logo" />
-      <nav class="navigation">
+    <header dir="ltr">
+      <img class="logo-img" src="imags/oo.png" alt="logo" /><!--الشعار-->
+      <nav class="navigation"><!--الأقسام-->
         <a href="# عن الموقع">عن الموقع </a>
         <a href="#الكتب"> الكتب</a>
       </nav>
@@ -76,7 +76,7 @@
           <div class="info">
             <p class="book-p">الصف الأول ثانوي - الترم الثالث -</p>
             <strong>
-            <a href="https://clesetp2.github.io/CLesetp2/">كيمياء (1-1) </a>
+            <a href="file:///C:/Users/abwbd/OneDrive/%D8%B3%D8%B7%D8%AD%20%D8%A7%D9%84%D9%85%D9%83%D8%AA%D8%A8/chemistry(1)/cleset.html" class="11">كيمياء (1-1) </a>
             </strong>
           </div>
         </div>
@@ -88,6 +88,17 @@
             <p class="book-p">الصف الثاني ثانوي - الترم الأول -</p>
             <strong>
             <a href="#" class="11">كيمياء (2-1) </a>
+            </strong>
+          </div>
+        </div>
+        <div class="card-1">
+          <div class="icon-2">
+            <img class="logo" src="imags/كيمياء-2.png" alt="logo" />
+          </div>
+          <div class="info">
+            <p class="book-p">الصف الثاني ثانوي - الترم الثاني -</p>
+            <strong>
+            <a href="#" class="11">كيمياء (2-2) </a>
             </strong>
           </div>
         </div>
