--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="info">
             <p class="book-p">الصف الثاني ثانوي - الترم الأول -</p>
             <strong>
-            <a href="#" class="11">كيمياء (2-1) </a>
+            <a href="https://clesetp2.github.io/CLesetp2/" class="11">كيمياء (2-1) </a>
             </strong>
           </div>
         </div>
